@@ -1,11 +1,13 @@
-% Generated by roxygen2 (4.0.2): do not edit by hand
+% Generated by roxygen2 (4.1.0): do not edit by hand
+% Please edit documentation in R/pushes.R
 \name{pbPost}
 \alias{pbPost}
 \title{Post a message via Pushbullet}
 \usage{
 pbPost(type = c("note", "link", "address", "file"), title = "", body = "",
   url = "", filetype = "text/plain", recipients, email, channel, deviceind,
-  apikey = .getKey(), devices = .getDevices(), verbose = FALSE)
+  apikey = .getKey(), devices = .getDevices(), verbose = FALSE,
+  debug = FALSE)
 }
 \arguments{
 \item{type}{The type of post: one of \sQuote{note}, \sQuote{link}, \sQuote{file}
@@ -32,7 +34,9 @@ the push is sent to all devices.}
 an email address. If both \code{recipients} and \code{email} are
 present, \code{recipients} is used.}
 
-\item{channel}{The (optional) channel tag to post the message to.}
+\item{channel}{A channel tag used to specify the name of the channel
+as the recipient. If either \code{recipients} or \code{email} are present,
+they will take precedence over \code{channel}.}
 
 \item{deviceind}{(Deprecated) The index (or a vector/list of indices) of the
 device(s) in the list of devices.}
@@ -49,6 +53,8 @@ supplied as an argument here, or via the file
 initialization.}
 
 \item{verbose}{Boolean switch to add additional output}
+
+\item{debug}{Boolean switch to add even more debugging output}
 }
 \value{
 A JSON result record is return invisibly
